--- a/src/App.scss
+++ b/src/App.scss
@@ -143,6 +143,8 @@ nav {
   padding: 2rem 0;
   font-size: 1.5rem;
   z-index: 11;
+  max-width: 350px;
+  border-right: 4px solid $secondary-color;
 
   hr {
     display: block;
@@ -219,12 +221,10 @@ nav {
   font-weight: 300;
   color: $light-grey;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 
   .brand-logo {
-    flex-basis: 30%;
-
     img {
       display: block;
       width: 100%;
@@ -234,7 +234,7 @@ nav {
   }
 
   .contact-detail-wrapper {
-    flex-basis: 60%;
+    margin-top: 1rem;
     .contact-detail {
       padding: 0.2rem 0;
 
@@ -427,7 +427,7 @@ nav {
 
 .mailing {
   margin-top: 4rem;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)),
     url("/mailing.jpg");
   background-size: cover;
   background-position: center;
@@ -463,7 +463,7 @@ nav {
     flex-basis: 30%;
 
     &:hover {
-      background-color: green;
+      background-color: $secondary-color;
       color: #fff;
     }
   }
@@ -628,7 +628,7 @@ nav {
 }
 
 /*FOOTER*/
-#footer {
+footer {
   margin-top: 5rem;
   background-color: lighten($color: $secondary-color, $amount: 7);
 
@@ -897,7 +897,7 @@ nav {
     justify-content: space-between;
   }
 
-  #footer {
+  footer {
     .contact-form {
       input,
       textarea {
@@ -922,7 +922,7 @@ nav {
     }
   }
 
-  #footer .container {
+  footer .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -961,8 +961,31 @@ nav {
     font-size: 15px;
   }
 
+  nav {
+    display: none;
+  }
+
+  main,
+  footer {
+    width: calc(100% - 350px);
+    margin-left: auto;
+  }
+
   .nav-expand-panel {
-    width: 30%;
+    left: 0;
+
+    .nav-shrink-btn {
+      display: none;
+    }
+
+    .links {
+      padding-top: 0.4rem;
+    }
+  }
+
+  .product-slider,
+  .carousel {
+    margin-top: 0 !important;
   }
 
   .carousel {
@@ -973,6 +996,15 @@ nav {
 @media (min-width: 1200px) {
   html {
     font-size: 16px;
+  }
+
+  main,
+  footer {
+    width: calc(100% - 400px);
+  }
+
+  .nav-expand-panel {
+    max-width: 400px;
   }
 
   .category-cards-container {
