--- a/src/App.scss
+++ b/src/App.scss
@@ -70,13 +70,9 @@ main {
   padding-bottom: 2rem;
 
   @media (min-width: $viewport-lg) {
-    margin-top: 0;
-    width: calc(100% - 300px);
-    margin-left: auto;
   }
 
   @media (min-width: $viewport-xl) {
-    width: calc(100% - 400px);
   }
 }
 
@@ -111,6 +107,15 @@ a {
   color: black;
 }
 
+button {
+  border: none;
+  background-color: transparent;
+
+  &:focus {
+    outline: none;
+  }
+}
+
 li {
   list-style: none;
 }
@@ -120,6 +125,11 @@ li {
   margin: 0 auto;
   padding-left: 0 !important;
   padding-right: 0 !important;
+}
+
+.inner-container {
+  padding-right: 4% !important;
+  padding-left: 4% !important;
 }
 
 .tab-active,
@@ -192,27 +202,65 @@ li {
 
 /*NAV*/
 
-nav {
+nav.top-bar {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  padding-top: calc(1.5rem - 4px);
-  padding-bottom: 1.5rem;
   background-color: rgba(255, 255, 255, 0.8);
   height: 70px;
   z-index: 10;
+  padding-top: 4px;
   border-bottom: 4px solid $secondary-color;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .nav-links {
+    height: 100%;
+    display: none;
+    .nav-link {
+      &:nth-child(2) {
+        padding-top: calc(1rem - 4px);
+        align-self: flex-start;
+      }
+    }
+
+    @media (min-width: $viewport-md) {
+      flex-basis: 60%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+  }
+
+  .search-btn {
+    @media (min-width: $viewport-md) {
+      display: none;
+    }
   }
 
   .nav-brand {
     max-width: 50px;
     height: auto;
+
+    @media (min-width: $viewport-md) {
+      max-width: 70px;
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  .home-btn {
+    display: none;
+
+    @media (min-width: $viewport-md) {
+      flex-basis: 20%;
+      display: block;
+    }
   }
 
   .nav-expand-btn {
@@ -237,10 +285,28 @@ nav {
     &:hover .first-line {
       width: 20px;
     }
+
+    @media (min-width: $viewport-md) {
+      display: none;
+    }
   }
 
-  @media (min-width: $viewport-lg) {
+  .nav-user-actions {
     display: none;
+    .user-action {
+      margin-left: 1.4rem;
+    }
+
+    @media (min-width: $viewport-md) {
+      justify-content: flex-end;
+      flex-basis: 20%;
+      display: flex;
+    }
+  }
+
+  svg {
+    font-size: 1.2rem !important;
+    color: darken($color: $secondary-color, $amount: 10);
   }
 }
 
@@ -274,10 +340,6 @@ nav {
 
   .nav-shrink-btn {
     display: inline-block;
-
-    @media (min-width: $viewport-lg) {
-      display: none;
-    }
   }
 
   .nav-search-btn {
@@ -310,10 +372,6 @@ nav {
     @media (min-width: $viewport-lg) {
       display: flex;
     }
-  }
-
-  .container {
-    height: 80vh;
   }
 
   .links {
@@ -359,18 +417,12 @@ nav {
 
       a {
         color: inherit;
-        padding-left: 0.6rem;
       }
     }
   }
 
-  @media (min-width: $viewport-lg) {
-    left: 0;
-    max-width: 300px;
-  }
-
-  @media (min-width: $viewport-xl) {
-    max-width: 400px;
+  @media (min-width: $viewport-md) {
+    display: none;
   }
 }
 
@@ -669,16 +721,9 @@ nav {
   justify-content: center;
   align-items: center;
   color: #fff;
-
-  .jumbotron-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    @extend %responsive-img;
-    background-color: $secondary-color;
-    filter: brightness(90%);
-    z-index: -1;
-  }
+  background: $secondary-color url("/static/media/gamingBg.535d7d7c.png");
+  background-size: cover;
+  background-position: center;
 
   .category-name {
     margin-top: 1rem;
@@ -839,6 +884,8 @@ nav {
 #product-list-page {
   .product-preview {
     margin-top: 2rem;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .product-list-filters {
@@ -1030,7 +1077,7 @@ nav {
       color: blueviolet;
     }
 
-    @media (min-width: $viewport-xl) {
+    @media (min-width: $viewport-lg) {
       flex-basis: 70%;
     }
   }
@@ -1069,17 +1116,17 @@ nav {
       width: 100%;
     }
 
-    @media (min-width: $viewport-xl) {
+    @media (min-width: $viewport-lg) {
       flex-basis: 25%;
-      margin-top: 0 !important;
-      margin-left: 1rem !important;
+      margin-top: 0;
+      margin-left: 1rem;
       align-self: flex-start;
       position: sticky;
-      top: 1rem;
+      top: calc(1rem + 70px);
     }
   }
 
-  @media (min-width: $viewport-xl) {
+  @media (min-width: $viewport-lg) {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -1219,12 +1266,9 @@ footer {
   }
 
   @media (min-width: $viewport-lg) {
-    width: calc(100% - 300px);
-    margin-left: auto;
   }
 
   @media (min-width: $viewport-xl) {
-    width: calc(100% - 400px);
   }
 }
 
