--- a/src/App.scss
+++ b/src/App.scss
@@ -108,18 +108,6 @@ li {
   list-style: none;
 }
 
-.container {
-  width: 90%;
-  margin: 0 auto;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-}
-
-.inner-container {
-  padding-right: 4% !important;
-  padding-left: 4% !important;
-}
-
 .tab-active,
 .filter-btn-active {
   background-color: $secondary-color !important;
@@ -132,6 +120,16 @@ li {
   &:hover {
     color: #c5bbb3;
   }
+}
+
+%container-x {
+  padding-right: 1.6rem !important;
+  padding-left: 1.6rem !important;
+}
+
+%container-y {
+  padding-top: 1.6rem !important;
+  padding-bottom: 1.6rem !important;
 }
 
 /*ROOT*/
@@ -225,6 +223,7 @@ nav.top-bar {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  @extend %container-x;
 
   .nav-links {
     height: 100%;
@@ -332,11 +331,13 @@ nav.top-bar {
   background-color: #fff;
   transition: all 0.6s;
   padding: 1rem 0;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
   z-index: 11;
   max-width: 350px;
   border-right: 4px solid $secondary-color;
   overflow-y: auto;
+  @extend %container-x;
+  @extend %container-y;
 
   hr {
     display: block;
@@ -420,7 +421,7 @@ nav.top-bar {
 
     .account-link {
       display: block;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       padding: 0.3rem 0;
       color: $light-grey;
 
@@ -840,11 +841,8 @@ nav.top-bar {
 
   .product-preview {
     position: relative;
-    max-width: 280px;
+    max-width: 240px;
     background-color: #fff;
-    margin: 0 0.6rem;
-    padding-top: 0.8rem;
-    border-radius: 5px;
 
     .preview-image {
       display: block;
@@ -852,7 +850,9 @@ nav.top-bar {
       height: 180px;
       object-fit: cover;
       object-position: center;
-      padding: 0 0.8rem;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      padding-top: 1rem;
     }
 
     .product-menu {
@@ -865,8 +865,6 @@ nav.top-bar {
       transition: bottom 0.4s;
       background-color: #fff;
       font-size: 1.1rem;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
 
       .product-menu-option {
         border-right: 1px solid black;
@@ -889,12 +887,7 @@ nav.top-bar {
     }
 
     .preview-product-details {
-      padding: 0 0.8rem;
-      margin: 1.2rem 0;
-      div,
-      h3 {
-        margin: 0.6rem 0;
-      }
+      padding: 2rem 1rem;
 
       .preview-product-name {
         font-size: 1.3rem;
@@ -902,6 +895,7 @@ nav.top-bar {
 
       .preview-product-rating {
         color: gold;
+        padding: 0.6rem 0;
       }
 
       .preview-product-price {
@@ -917,6 +911,10 @@ nav.top-bar {
       }
     }
   }
+
+  .tns-item {
+    margin-left: 20px;
+  }
 }
 
 /*MAILING*/
@@ -929,6 +927,7 @@ nav.top-bar {
   background-position: center;
   padding: 5rem 0;
   text-align: center;
+  @extend %container-x;
 
   h2 {
     font-size: 1.2rem;
@@ -1141,7 +1140,7 @@ nav.top-bar {
   @media (min-width: $viewport-lg) {
     grid-template-columns: 1fr 5fr 5fr 1fr;
     grid-template-rows: 1px;
-    column-gap: 1rem;
+    column-gap: 2rem;
     grid-template-areas:
       ". . . ."
       ". product-slider product-details ."
@@ -1260,31 +1259,10 @@ nav.top-bar {
 
   .product-preview-list {
     grid-area: product-list;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .product-preview {
-    padding-left: 1rem;
-    flex-basis: 50%;
-  }
-
-  @media (min-width: 576px) {
-    .product-preview {
-      flex-basis: 33%;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .product-preview {
-      flex-basis: 25%;
-    }
-  }
-
-  @media (min-width: 992px) {
-    .product-preview {
-      flex-basis: 33%;
-    }
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    justify-items: center;
   }
 }
 
@@ -1480,8 +1458,9 @@ footer {
   grid-area: footer;
   background-color: lighten($color: $secondary-color, $amount: 7);
 
-  section.container {
-    padding: 2rem 0;
+  section {
+    @extend %container-y;
+    @extend %container-x;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
