--- a/src/App.scss
+++ b/src/App.scss
@@ -70,18 +70,18 @@ h3 {
 }
 
 html {
-  font-size: 12px;
+  font-size: 14px;
 
   @media (min-width: $viewport-md) {
-    font-size: 14px;
-  }
-
-  @media (min-width: $viewport-lg) {
     font-size: 15px;
   }
 
-  @media (min-width: $viewport-xl) {
+  @media (min-width: $viewport-lg) {
     font-size: 16px;
+  }
+
+  @media (min-width: $viewport-xl) {
+    font-size: 17px;
   }
 }
 
@@ -132,13 +132,17 @@ li {
   padding-bottom: 1.6rem !important;
 }
 
+%container-xy {
+  padding: 1.6rem !important;
+}
+
 /*ROOT*/
 
 #root {
   display: grid;
   grid-template-columns: 100%;
   grid-template-areas: "header" "main" "footer";
-  row-gap: 70px;
+  row-gap: 5rem;
   background-color: rgb(245, 245, 245);
 }
 
@@ -215,7 +219,7 @@ nav.top-bar {
   left: 0;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.8);
-  height: 70px;
+  height: 5rem;
   z-index: 10;
   padding-top: 4px;
   border-bottom: 4px solid $secondary-color;
@@ -229,9 +233,26 @@ nav.top-bar {
     height: 100%;
     display: none;
     .nav-link {
+      position: relative;
       &:nth-child(2) {
         padding-top: calc(1rem - 4px);
         align-self: flex-start;
+      }
+
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 95%;
+        left: 0;
+        width: 0;
+        height: 2px;
+        background-color: red;
+        transition: all 0.4s;
+      }
+
+      &:hover::before {
+        width: 100%;
       }
     }
 
@@ -841,7 +862,7 @@ nav.top-bar {
 
   .product-preview {
     position: relative;
-    max-width: 240px;
+    max-width: 17rem;
     background-color: #fff;
 
     .preview-image {
@@ -1009,6 +1030,10 @@ nav.top-bar {
         @extend %responsive-img;
       }
     }
+
+    @media (min-width: $viewport-lg) {
+      background-color: transparent;
+    }
   }
 
   .product-details {
@@ -1038,8 +1063,8 @@ nav.top-bar {
       text-align: center;
       background-color: red;
       color: #fff;
-      width: 60px;
-      height: 60px;
+      width: 5rem;
+      height: 5rem;
     }
 
     div,
@@ -1060,7 +1085,7 @@ nav.top-bar {
       display: flex;
 
       .prices {
-        padding: 0.4rem 1.2rem;
+        padding-left: 1.2rem;
       }
 
       div {
@@ -1133,7 +1158,7 @@ nav.top-bar {
 
     .tabs-data {
       border-top: 1px solid $secondary-color;
-      padding-top: 1rem;
+      @extend %container-xy;
     }
   }
 
@@ -1190,6 +1215,7 @@ nav.top-bar {
       overflow-y: auto;
       font-size: 1.4rem;
       padding: 2rem 0;
+      @extend %container-xy;
 
       .filter-menu-options {
         display: flex;
@@ -1269,14 +1295,16 @@ nav.top-bar {
 /*CART*/
 
 #cart {
-  grid-template-areas: ". cartlist ." "best-selling best-selling best-selling";
+  grid-template-rows: 1px;
+  grid-template-areas: ". . ." ". cartlist ." "best-selling best-selling best-selling";
+  row-gap: 2rem;
 
   .cart-wrapper {
     grid-area: cartlist;
     display: grid;
     grid-template-columns: 8fr 300px;
     grid-template-areas: "list list" "sum sum";
-    gap: 1rem;
+    gap: 2rem;
 
     @media (min-width: $viewport-lg) {
       grid-template-areas: "list sum";
@@ -1284,7 +1312,6 @@ nav.top-bar {
 
     .cart-list {
       grid-area: list;
-      margin-top: 1rem;
       padding: 1rem;
       background-color: #fff;
 
@@ -1293,6 +1320,7 @@ nav.top-bar {
       }
 
       .cart-item {
+        margin-top: 2rem;
         padding-bottom: 1.6rem;
         border-bottom: 1px solid $secondary-color;
         display: flex;
@@ -1300,7 +1328,6 @@ nav.top-bar {
         align-items: center;
 
         .cart-item-img {
-          margin-bottom: 1rem;
           img {
             display: block;
             max-width: 70px;
@@ -1308,7 +1335,6 @@ nav.top-bar {
         }
 
         .cart-item-details {
-          padding-left: 1rem;
           text-align: right;
 
           .product-name {
@@ -1326,6 +1352,7 @@ nav.top-bar {
             @extend %input;
             @extend %input-submit;
             border-color: red;
+            margin-top: 0;
 
             &:hover {
               background-color: red;
@@ -1349,55 +1376,56 @@ nav.top-bar {
         flex-basis: 70%;
       }
     }
+  }
+}
 
-    .cart-summary {
-      grid-area: sum;
-      padding: 1rem;
-      background-color: #fff;
+.cart-summary {
+  grid-area: sum;
+  padding: 1rem;
+  background-color: #fff;
 
-      h2 {
-        font-weight: bold;
-        color: $secondary-color;
-      }
+  h2 {
+    font-weight: bold;
+    color: $secondary-color;
+  }
 
-      .total-price,
-      .shipping-price,
-      .final-price {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 0.8rem;
-      }
+  .cart-summary-item {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.8rem;
+  }
 
-      hr {
-        margin-top: 0.8rem;
-        display: block;
-        border: none;
-        height: 3px;
-        width: 100%;
-        background-color: $secondary-color;
-      }
+  hr {
+    margin-top: 0.8rem;
+    display: block;
+    border: none;
+    height: 3px;
+    width: 100%;
+    background-color: $secondary-color;
+  }
 
-      .checkout-btn {
-        margin-top: 1rem;
-        @extend %input;
-        @extend %input-submit;
-        width: 100%;
-      }
+  .checkout-btn {
+    text-align: center;
+    display: block;
+    margin-top: 1rem;
+    @extend %input;
+    @extend %input-submit;
+    width: 100%;
+  }
 
-      @media (min-width: $viewport-md) {
-        margin-top: 0;
-        position: sticky;
-        top: calc(1rem + 70px);
-        align-self: flex-start;
-      }
-    }
+  @media (min-width: $viewport-lg) {
+    position: sticky;
+    top: 6rem;
+    align-self: flex-start;
   }
 }
 
 /*ORDER*/
 
 #order {
-  padding-top: 2rem;
+  grid-template-rows: 1px;
+  grid-template-areas: ". . ." ". ow .";
+  row-gap: 2rem;
 
   input,
   textarea {
@@ -1408,7 +1436,8 @@ nav.top-bar {
   }
 
   .address {
-    padding: 1rem;
+    @extend %container-xy;
+    grid-area: address;
     background-color: #fff;
 
     .saved-addresses {
@@ -1439,9 +1468,9 @@ nav.top-bar {
   }
 
   .credit-card {
-    margin-top: 1rem;
+    @extend %container-xy;
+    grid-area: card;
     background-color: #fff;
-    padding: 1rem;
 
     input {
       @extend %input;
@@ -1451,6 +1480,18 @@ nav.top-bar {
       margin: 1.4rem 0;
     }
   }
+
+  .order-wrapper {
+    grid-area: ow;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 8fr 300px;
+    grid-template-areas: "address address" "card card" "sum sum";
+
+    @media (min-width: $viewport-lg) {
+      grid-template-areas: "address sum" "card sum";
+    }
+  }
 }
 
 /*FOOTER*/
@@ -1458,7 +1499,7 @@ footer {
   grid-area: footer;
   background-color: lighten($color: $secondary-color, $amount: 7);
 
-  section {
+  section.contact-ways {
     @extend %container-y;
     @extend %container-x;
     display: flex;
@@ -1520,7 +1561,6 @@ footer {
   }
 
   .copyright {
-    flex-basis: 100%;
     color: $light-grey;
     padding: 0.8rem 0;
     background-color: $secondary-color;
