--- a/src/App.scss
+++ b/src/App.scss
@@ -49,11 +49,14 @@ $shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   }
 }
 
+button {
+  cursor: pointer;
+}
+
 %input-submit {
   @extend %input;
   border: 1px solid $secondary-color;
   background-color: transparent;
-  cursor: pointer;
   transition: all 0.4s;
   width: 100%;
 
@@ -1040,6 +1043,19 @@ nav.top-bar {
 
   .category-name {
     margin-top: 1rem;
+    padding-bottom: 0.2rem;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 0;
+      width: 80%;
+      height: 2px;
+      background-color: red;
+    }
   }
 }
 
@@ -1332,6 +1348,141 @@ nav.top-bar {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
     justify-items: center;
+  }
+}
+
+#admin {
+  grid-template-columns: 280px 1fr 1px;
+  grid-template-areas: ". heading ." ". table-actions ." ". table .";
+  gap: 1rem;
+
+  hr {
+    border: none;
+    height: 2px;
+    width: 75%;
+    margin: 0.6rem auto;
+    background-color: #fff;
+  }
+
+  nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 280px;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: lighten($color: black, $amount: 10);
+    @extend %container-y;
+    color: #fff;
+    text-align: center;
+
+    .nav-links {
+      margin-top: 2rem;
+      .nav-link {
+        border-bottom: 1px solid $light-grey;
+        transition: all 0.4s;
+
+        &:last-child {
+          border-bottom: none;
+        }
+
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.7);
+          color: black;
+        }
+
+        a {
+          display: block;
+          color: inherit;
+          padding: 0.8rem 0;
+          width: 100%;
+          font-weight: lighter;
+        }
+      }
+    }
+  }
+
+  h1 {
+    grid-area: heading;
+    position: relative;
+    padding-bottom: 0.4rem;
+    text-align: center;
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: red;
+      width: 15%;
+      height: 2px;
+    }
+  }
+
+  .table-actions {
+    grid-area: table-actions;
+
+    .add-btn {
+      display: inline-block;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      padding: 0.6rem;
+      font-size: 13px;
+      background-color: lighten($color: blue, $amount: 20);
+      color: #fff;
+    }
+  }
+
+  table {
+    grid-area: table;
+    text-align: center;
+    border-collapse: collapse;
+
+    td,
+    th {
+      border: 1px solid #ddd;
+      padding: 3px;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    tr:hover {
+      background-color: #ddd;
+    }
+
+    th {
+      background-color: $secondary-color;
+      font-weight: lighterw;
+      color: white;
+    }
+
+    img {
+      display: block;
+      width: 50px;
+      margin: 0 auto;
+    }
+
+    .table-btn {
+      display: block;
+      width: 75%;
+      padding: 0.2rem 0.4rem;
+      margin: 0.2rem auto;
+      font-size: 13px;
+    }
+
+    .delete-btn {
+      font-family: inherit;
+      background-color: red;
+      color: #fff;
+    }
+
+    .update-btn {
+      background-color: darken($color: yellow, $amount: 6);
+    }
   }
 }
 
